--- a/auth/package.json
+++ b/auth/package.json
@@ -19,23 +19,23 @@
   "license": "ISC",
   "dependencies": {
     "@types/cookie-session": "^2.0.42",
+    "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.19"
+    "mongoose": "^5.11.19",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
     "mongodb-memory-server": "^6.9.6",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.3",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.5"
+    "ts-jest": "^26.5.3"
   }
 }
